[package]
name = "blackroad"
version = "1.0.0"
edition = "2021"
authors = ["BlackRoad OS, Inc."]
description = "Official Rust SDK for the BlackRoad API"
license = "SEE LICENSE IN LICENSE"
repository = "https://github.com/BlackRoad-OS/blackroad-sdk-rust"
homepage = "https://docs.blackroad.io/sdk/rust"
documentation = "https://docs.rs/blackroad"
readme = "README.md"
keywords = ["blackroad", "api", "sdk", "agents", "ai"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
